--- a/index.html
+++ b/index.html
@@ -298,9 +298,10 @@
 
      <div class="container">
           <div class="balls">
-               <h2 class="balls-title">Наши преимущества</h2>
 
-               <div class="balls-cards">
+               <h2 class="balls-title">ТЫ ПИДОР</h2>
+
+               <!-- <div class="balls-cards">
 
                     <div class="balls-cards-item">
                          <img class="balls-cards-image" src="img/balls-cards/card-1.svg" alt="balls-cards">
@@ -340,7 +341,8 @@
                               для всей семьи</p>
                     </div>
 
-               </div>
+               </div> -->
+
           </div>
      </div>
 
