--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
      <div class="container">
           <div class="balls">
 
-               <h2 class="balls-title">ТЫ ПИДОР</h2>
+               <h2 class="balls-title">Наши преимущества</h2>
 
-               <!-- <div class="balls-cards">
+               <div class="balls-cards">
 
                     <div class="balls-cards-item">
                          <img class="balls-cards-image" src="img/balls-cards/card-1.svg" alt="balls-cards">
@@ -341,16 +341,11 @@
                               для всей семьи</p>
                     </div>
 
-               </div> -->
+               </div>
 
           </div>
      </div>
 
-
-
-
-
-     <div class="lol"></div>
      <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
      <script src="js/main.js"></script>
 </body>
