--- a/index.html
+++ b/index.html
@@ -64,16 +64,12 @@
 
           </section>
 
-
-          <!-- Slider main container -->
           <div class="swiper">
-               <!-- Additional required wrapper -->
+
                <div class="swiper-wrapper">
 
-                    <!-- Slides -->
-
                     <div class="swiper-slide">
-                         <div class="slide slide-text-light slide-summer">
+                         <div class="slide slide-text-light slide-summer-1">
                               <div class="slide-content">
                                    <h2 class="slide-h2">Неделя летних овощей</h2>
                                    <p class="slide-p">Специальная овощная корзина. Новые продукты,
@@ -84,9 +80,9 @@
                     </div>
 
                     <div class="swiper-slide">
-                         <div class="slide slide-text-light slide-summer">
+                         <div class="slide slide-text-light slide-summer-2">
                               <div class="slide-content">
-                                   <h2 class="slide-h2">Неделя летних овощей</h2>
+                                   <h2 class="slide-h2">Витаминная неделя</h2>
                                    <p class="slide-p">Специальная овощная корзина. Новые продукты,
                                         специальные цены, скидки!</p>
                                    <a href="#" class="button button-primary">Заказать со скидкой</a>
@@ -95,9 +91,10 @@
                     </div>
 
                     <div class="swiper-slide">
-                         <div class="slide slide-text-light slide-summer">
+                         <div class="slide slide-text-light slide-summer-3">
                               <div class="slide-content">
-                                   <h2 class="slide-h2">Неделя летних овощей</h2>
+                                   <h2 class="slide-h2">Неделя осенних
+                                        овощей</h2>
                                    <p class="slide-p">Специальная овощная корзина. Новые продукты,
                                         специальные цены, скидки!</p>
                                    <a href="#" class="button button-primary">Заказать со скидкой</a>
@@ -342,9 +339,35 @@
                     </div>
 
                </div>
-
           </div>
      </div>
+
+     <!-- ! footer -->
+
+
+     <footer class="footer">
+          <div class="footer_content container">
+               <div class="footer_links">
+                    <a class="logo" href="#"><img width="205" class="logo-image" src="img/logo.png"
+                              alt="Логотип Индекс Еда"></a>
+                    <a href="#" class="footer_link">Доставка и оплата</a>
+                    <a href="#" class="footer_link">Напишите нам</a>
+               </div>
+               <div class="footer_social">
+                    <a href="#" class="footer_social_links"><img src="img/footer-icon/telegram.svg" alt="teleg"
+                              class="footer_social_img"></a>
+                    <a href="#" class="footer_social_links"><img src="img/footer-icon/vk.svg" alt="vk"
+                              class="footer_social_img"></a>
+                    <a href="#" class="footer_social_links"><img src="img/footer-icon/instagram.svg" alt="insta"
+                              class="footer_social_img"></a>
+               </div>
+          </div>
+     </footer>
+
+
+
+
+
 
      <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
      <script src="js/main.js"></script>
